rename the logo

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
     <div class="container-fluid afterMenu">
         <br><br><br>
         <div class="text-center">
-            <img src="images/_logogram_shapes_three-512.png" width="300" class="img-fluid" alt="">
+            <img src="images/logo.png" width="300" class="img-fluid" alt="">
             <br><br><br>
             <span class="fa fa-star checked"></span>
             <span class="fa fa-star checked"></span>
